# shellize

./: AUTHORS  DATE  Makefile  Makefile.am  Makefile.in  README.md  bootstrap.sh  config.status  configure  configure.ac  shellize.spec  shellize.spec.in
autom4te.cache/: output.1  traces.0  traces.1
rpms/: shellize-0.0.0-1.src.rpm  shellize-0.0.0-1.x86_64.rpm  shellize-0.0.1-1.src.rpm  shellize-0.0.1-1.x86_64.rpm  shellize-0.0.3-1.src.rpm  shellize-0.0.3-1.x86_64.rpm  shellize-0.0.4-1.noarch.rpm  shellize-0.0.4-1.src.rpm  shellize-0.0.5-1.noarch.rpm  shellize-0.0.5-1.src.rpm
src/: Makefile  Makefile.am  Makefile.in  shellize
